emma (0.4) unstable; urgency=low
  * clear all sql_log/message entries via popup
  * extended blobview for editing of big values (save/load to/from) disk
  * per query-tab encoding support (all python supported encodings)
  * fixed tab-signal handling - popup and buttons now work on all tabs
  * reread-config menu option
  * store table order on request
 -- Florian Schmidt <schmidt_florian@gmx.de>  Sat, 12 Aug 2006 19:54:37 +0200
 
emma (0.3) unstable; urgency=low
  Sun, 04 Jun 2006 17:47:06 +0200
  * fixed field escaping at order-change
  * introduced config directory
  * first plugin system
  * first table_editor plugin 
 -- Florian Schmidt <schmidt_florian@gmx.de>  Sun, 04 Jun 2006 17:47:06 +0200
 
emma (0.2) unstable; urgency=low
  Sun, 26 Feb 2006 01:45:54 +0100
  * table view
  * query result popup
  * order by click
  * field condition filter
  * local regex search
  * append row
  * delete row
  * edit row
  Sun, 26 Feb 2006 14:05:56 +0100
  * fixed database/table order
  * show tables while loading their descriptions
  * process events in show_sql_log()
  * update table view after first nb-page change
  * db-tables view
  * refresh/truncate/drop table
  * refresh db
  * new table
  * drop db
  * new database
  * refresh host
  * delete host
  * new host
  * modify host
  Wed, 01 Mar 2006 19:48:49 +0100
  * load query
  * save query
  * mysql_ping to connected hosts
  * save workspace
  * load workspace
  * first easy pickle/unpickle
  Fri, 03 Mar 2006 18:59:23 +0100
  * save result
  Sat, 04 Mar 2006 18:53:21 +0100
  * debian package
  Sat, 11 Mar 2006 16:03:49 +0100
  * execute big sql skripts from file
  * better placement of text-cursor on mysql error
  * support for automatic reading bzip2 files on "execute big sql skripts from file"
  * exclude regex
 -- Florian Schmidt <schmidt_florian@gmx.de>  Sat, 11 Mar 2006 16:03:49 +0100

emma (0.1) unstable; urgency=low
  * copied yamysqlfront.glade to emma.glade
  * connect first signal handlers in menubar